# pqc-trinity-gateway

./: .gitignore  CMakeLists.txt  README.md  build.sh  chat_core.py  dashboard.py  dashboard_rx.py  dashboard_spy.py  dashboard_tx.py  receiver.py  requirements.txt  rx_state.json  sanity_check.py  setup.sh  transmitter.py
config/: gateway.conf  ipsec.conf  openssl-pqc.cnf  strongswan.conf
data/: users.json
rooms/502505/: kem_exchange.json  rx_pubkeys.json  tx_pubkeys.json
rooms/719799/: kem_exchange.json  messages.jsonl  rx_pubkeys.json  tx_pubkeys.json
rooms/768046/: kem_exchange.json  messages.jsonl  rx_pubkeys.json  tx_pubkeys.json
rooms/818466/: kem_exchange.json  messages.jsonl  rx_pubkeys.json  tx_pubkeys.json
rooms/826447/: kem_exchange.json  messages.jsonl  rx_pubkeys.json  tx_pubkeys.json
src/: gateway.h  main.c
src/audit/: audit.c  audit.h
src/layer1_ipsec/: ipsec_manager.c  ipsec_manager.h
src/layer2_tls/: tls_server.c  tls_server.h
src/layer3_ssh/: ssh_server.c  ssh_server.h
src/vault/: vault.c  vault.h
tests/: test_audit.sh  test_layer1.sh  test_layer2.sh  test_layer3.sh
